--- a/MIS/Views/Home/Index.cshtml
+++ b/MIS/Views/Home/Index.cshtml
@@ -26,25 +26,53 @@
         <i class="fas fa-folder record-icon"></i>
         <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
         <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-
+        <div class="record-options">
+            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
+            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
+        </div>
     </div>
     <div class="record">
         <i class="fas fa-folder record-icon"></i>
         <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
         <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-
+        <div class="record-options">
+            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
+            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
+        </div>
     </div>
     <div class="record">
         <i class="fas fa-folder record-icon"></i>
         <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
         <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-
+        <div class="record-options">
+            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
+            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
+        </div>
     </div>
     <div class="record">
         <i class="fas fa-folder record-icon"></i>
         <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
         <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-
+        <div class="record-options">
+            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
+            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
+        </div>
+    </div> <div class="record">
+        <i class="fas fa-folder record-icon"></i>
+        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
+        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
+        <div class="record-options">
+            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
+            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
+        </div>
+    </div> <div class="record">
+        <i class="fas fa-folder record-icon"></i>
+        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
+        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
+        <div class="record-options">
+            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
+            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
+        </div>
     </div>
 
 </div>
@@ -93,5 +121,5 @@
             });
 
         });
-    })
+    }))
 </script>
