chat scroll bar

--- a/MIS/wwwroot/css/chat.css
+++ b/MIS/wwwroot/css/chat.css
@@ -119,3 +119,23 @@
     margin-right: 10px;
     
 }
+
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: rgba(0 , 0 , 0 , .03);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0 , 0 , .1);
+}
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: rgba(0, 0, 0, .1);
+    }
