--- a/MIS/Views/Meeting/Index.cshtml
+++ b/MIS/Views/Meeting/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <link href="~/css/meeting.css" rel="stylesheet" />
 
-<button class="btn btn-police btn-add" data-toggle="modal" data-target="#newMeeting"><i class="fas fa-plus-circle icon" ></i> Meeting </button>
+<button class="btn btn-police btn-add" data-toggle="modal" data-target="#newMeeting"><i class="fas fa-plus-circle icon"></i> Meeting </button>
 
 <div class="meetings">
     <div class="meeting-day">
@@ -95,24 +95,30 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body">
-                <form asp-action="Add" asp-controller="MeetingRequest"  onkeyup="return event.key != 'Enter';"  onkeypress="return event.key != 'Enter';"  onkeydown="return event.key != 'Enter';">
+                <form asp-action="Add" asp-controller="MeetingRequest" onkeyup="return event.key != 'Enter';" onkeypress="return event.key != 'Enter';" onkeydown="return event.key != 'Enter';">
                     <div class="form-group">
-                        <label >Topic</label>
+                        <label>Topic</label>
                         <input name="Topic" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label >Participants</label>
+                        <label>Start Date</label>
+                        <input name="StartDate" class="form-control" type="datetime-local" />
+                    </div>
+                    <div class="form-group">
+                        <label>End Date</label>
+                        <input name="EndDate" class="form-control" type="datetime-local" />
+                    </div>
+                    <div class="form-group" id="participantsContainer">
+                        <label>Participants</label>
                         <input class="form-control" id="participantEmail" onkeyup="addParticipant(event,this.value)" />
                         <ul id="participantsList" class="participants-list">
-                           
                         </ul>
-                        <input name="participants[0]" />
-                        <input name="test" />
+
                     </div>
                     <button class="btn btn-police">Submit</button>
                 </form>
             </div>
-            
+
         </div>
     </div>
 </div>
@@ -121,7 +127,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body" id="attendeesBody">
-                
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
