--- a/MIS/Views/Shared/_Layout.cshtml
+++ b/MIS/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/records.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/PoliceSection.css" />
+    <link href="https://unpkg.com/treeflex/dist/css/treeflex.css" rel="stylesheet">
 </head>
 <body>
     <header>
