--- a/MIS/Views/PoliceSection/Index.cshtml
+++ b/MIS/Views/PoliceSection/Index.cshtml
@@ -9,7 +9,9 @@
         <button class="btn btn-outline-secondary" type="button">Search</button>
     </div>
 </div>*@
-<div class="search border mt-5 mb-5"> <input type="text" class="search-input" placeholder="Search..." name=""> <a href="#" class="search-icon"> <i class="fa fa-search"></i> </a> </div>
+<div class="search border mt-5 mb-5"> <input type="text" class="search-input" 
+                                             placeholder="Search..." name=""> <a href="#" class="search-icon"> 
+    <i class="fa fa-search"></i> </a> </div>
 
 <div class="container mt-4 mb-5">
     <div class="row p-0 text-center">
@@ -19,16 +21,16 @@
             </a>
          </div>
 
-         <div class="col col-4">
-                <a class="btn btn-primary" asp-controller="PoliceSection" asp-action="Create">
-                    Update Police Station
+         @*<div class="col col-4">
+                <a class="btn btn-primary" asp-controller="policesection" asp-action="update">
+                    update police station
                 </a>
          </div>
          <div class="col col-4">
-                <a class="btn btn-danger" asp-controller="PoliceSection" asp-action="Create">
-                    Delete Police Station
+                <a class="btn btn-danger" asp-controller="policesection" asp-action="delete">
+                    delete police station
                 </a>
-         </div>
+         </div>*@
             
     
         
@@ -43,21 +45,33 @@
         {
             if (obj != null)
             {
-                <div class="col-4 mb-5 c4rd">
+                <div class="col-4 mb-5" >
 
                     <div class="shadow card rounded justify-content-center text-center align-items-center zoom c4rd"
-                         style="width: 18rem; background-color:#374f6b; color:#fff">
+                         style="width: 18rem; background-color:#374f6b; height:auto ;color:#fff; border-radius:50px">
                         <div class="card-body p-0">
                             <h5 class="card-title">@obj.Name</h5>
-                            
-                                <p>@obj.Policemen.Count <span>police officer</span></p>
-                            
+
+                            <p>@obj.Policemen.Count <span>police officer</span></p>
+
                             <p class="card-text">
                                 <i class="bi bi-geo-alt"></i>  <span>@obj.Address.City ,</span>
                                 <span>@obj.Address.Street, </span>
                                 <span>@obj.Address.Number</span>
                             </p>
-                            <a href="#" class="btn btn-light">Go to section</a>
+                            <div class="row text-center mb-4">
+                                <div class="col col-6">
+                                    <a class="btn btn-primary" asp-route-Id="@obj.Id" asp-controller="policesection" asp-action="Update">
+                                        Update  
+                                    </a>
+                                </div>
+                                <div class="col col-4">
+                                    <a class="btn btn-danger" asp-route-Id="@obj.Id" asp-controller="policesection" asp-action="Delete">
+                                        Delete 
+                                    </a>
+                                </div>
+                            </div>
+                            <a asp-controller="policesection" asp-action="Hierarchy" class="btn btn-light">Go to section</a>
                         </div>
                     </div>
 
