--- a/MIS/wwwroot/css/PoliceSection.css
+++ b/MIS/wwwroot/css/PoliceSection.css
@@ -1,5 +1,5 @@
 ﻿.zoom {
-    padding: 50px;
+    padding : 50px;
     transition: transform .5s; 
     width: 200px;
     height: 200px;
@@ -13,6 +13,7 @@
 
 .c4rd {
     border-radius : 25px;
+    height:auto;
     
 }
 
