--- a/MIS/Views/Meeting/Chat.cshtml
+++ b/MIS/Views/Meeting/Chat.cshtml
@@ -1,17 +1,17 @@
 ﻿@using MIS.ViewModels.Meeting
-@model ChatUserViewModel
+@model ChatViewModel
 
 <link href="~/css/chat.css" rel="stylesheet" />
 
 
 <div class="chat-container">
     <div class="chat-header">
-        <div class="chat-name">Consulting  <div class="chat-members-nr"><i class="fas fa-user"></i> <span id="usersConnected">0</span> online</div></div>
-        <span class="chat-end-date"><i class="far fa-clock"></i> 12:30</span>
+        <div class="chat-name">@Model.Topic  <div class="chat-members-nr"><i class="fas fa-user"></i> <span id="usersConnected">0</span> online</div></div>
+        <span class="chat-end-date"><i class="far fa-clock"></i> @Model.End.ToString("HH:mm")</span>
 
     </div>
     <div class="chat-body" id="chat-body">
-        <div class="message-container">
+        @*<div class="message-container">
             <div class="message message-received">
                 <div class="message-receiver-name">Toma Mihnea</div>
                 <div class="message-received-flex">
@@ -32,13 +32,13 @@
                 <span class="message-content">Hiiiiiiiiiiiiiii</span>
                 <span class="message-date">12:04</span>
             </div>
-        </div>
-        <div class="message-container message-container-received">
+        </div>*@
+        @*<div class="message-container message-container-received">
             <div class="message message-sent">
                 <span class="message-content">HiHiHiHiHiHiHiHiHiHiHiHiHiHiHi</span>
                 <span class="message-date">12:04</span>
             </div>
-        </div>
+        </div>*@
     </div>
 
     <div class="chat-footer">
