--- a/MIS/Views/CriminalRecord/Index.cshtml
+++ b/MIS/Views/CriminalRecord/Index.cshtml
@@ -59,7 +59,7 @@
 
             </div>
         </div>
-        <input type="text" name="Id" value="@record.Id" />
+        @*<input type="text" name="Id" value="@record.Id" />*@
 
     }
 
