--- a/MIS/Views/CriminalRecord/Details.cshtml
+++ b/MIS/Views/CriminalRecord/Details.cshtml
@@ -11,7 +11,7 @@
 @{CriminalRecord criminalRecord = null; }
 
 @foreach (var item in Model)
-{   
+{
     <h3 id="recordStatus"> Record Status : @item.CriminalRecord.Status </h3>
     <h3 id="recordStatus"> Type : @item.CriminalRecord.Type </h3>
 
@@ -26,22 +26,42 @@
 
 
 <form asp-controller="CriminalRecord" asp-action="AddPolicemanToACriminalRecord">
-    <input type="hidden" name="criminalRecordId" id="criminalRecordValue" value="@criminalRecord" />
-    <input type="search" class="search-input" placeholder="Search..." />
-    <input class="fcol-2" type="text" name="policemanEmail" id="emailValue" />
+    <input type="hidden" name="criminalRecordId" id="criminalRecordValue" value="@criminalRecord.Id" />
+    <input class="fcol-2" type="text" name="policemanEmail" placeholder="Email.." id="emailValue" />
     <button type="submit" class="btn btn-submit btn-primary">
         Add policeman
     </button>
+    @*<div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">Email</span>
+            </div>
+            <input type="text" class="form-group w-25 h-100 " placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+        </div>*@
+
 </form>
+
+
 
 
 @foreach (var item in Model)
 {
-    <div>
-        @item.Policeman.Name
-        @item.Policeman.Email
-        @item.Policeman.Seniority
-    </div>
+<ul class="list-group">
+    @if (@item.Policeman == null)
+    {
+        break;
+    }
+
+    else
+    {
+        <li class="list-group-item active"> 
+        <span id="mySpan">Name : @item.Policeman.Name </span> 
+        <span id="mySpan">Email : @item.Policeman.Email</span> 
+        </li>
+
+        
+
+    }
+</ul>
 }
 
 
