--- a/MIS/wwwroot/css/details.css
+++ b/MIS/wwwroot/css/details.css
@@ -20,3 +20,20 @@
     color:darkblue;
     font-size:19px;
 }
+
+.list-group
+{   
+    margin-top:20px;
+    display:inline-block;
+    color:aqua;
+    padding:5px 5px 5px 5px;
+}
+
+#mySpan{
+    background-color:cornflowerblue;
+    color:black;
+    margin-left:10px;
+    margin-right:10px;
+    padding:5px 5px 5px 5px;
+
+}
