--- a/MIS/Views/Shared/_Layout.cshtml
+++ b/MIS/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.js"></script>
     <link href="~/css/records.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/PoliceSection.css" />
     <link href="https://unpkg.com/treeflex/dist/css/treeflex.css" rel="stylesheet">
@@ -31,6 +32,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PoliceSection" asp-action="Index">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="MeetingRequest" asp-action="Index" asp-area="" 
+                               data-toggle="modal" data-ajax-update="#requestsBody" data-target="#requestsModal" data-ajax="true">  Requests</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -55,5 +60,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+ 
+    <div class="modal fade" id="requestsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Meeting Requests</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="requestsBody">
+                    
+                </div>
+               
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+
