Police station commit 3

--- a/MIS/Views/PoliceSection/Hierarchy.cshtml
+++ b/MIS/Views/PoliceSection/Hierarchy.cshtml
@@ -21,4 +21,7 @@
         </li>
     </ul>
 </div>
+<div class="col">
+    <input type="submit" class="btn btn-info w-100" value="Create" />
+</div>
 
