--- a/MIS/Views/PoliceSection/Delete.cshtml
+++ b/MIS/Views/PoliceSection/Delete.cshtml
@@ -34,7 +34,7 @@
                         <input asp-for="Address.Number" class="form-control" />
                     </div>
                 </div>
-                <div class="form-group row">
+                @*<div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Policemen"></label>
                     </div>
@@ -42,7 +42,7 @@
                         <input asp-for="Policemen.Count" class="form-control" />
 
                     </div>
-                </div>
+                </div>*@
                 <div class="form-group row">
                     <div class="col-8 offset-4 row">
                         <div class="col">
