--- a/MIS/Views/Meeting/Index.cshtml
+++ b/MIS/Views/Meeting/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@using MSI.Model
+﻿<script src="~/js/meeting.js"></script>
+<link href="~/css/meeting.css" rel="stylesheet" />
+@using MSI.Model
 @model IEnumerable<IEnumerable<Meeting>>
 @{
     ViewData["Title"] = "Index";
@@ -7,7 +9,7 @@
 
 <button class="btn btn-police btn-add" data-toggle="modal" data-target="#newMeeting"><i class="fas fa-plus-circle icon"></i> Meeting </button>
 
-<div class="meetings">
+@*<div class="meetings">
     @foreach (var it in Model)
     {
         <div class="meeting-day">
@@ -43,89 +45,89 @@
                 </div>
             }
         </div>
-    }
+    }*@
 
-    <div class="meeting-day">
-        <div class="meeting-day-date-container">
-            <span class="meeting-day-date">15/7/2021</span>
-        </div>
-        <div class="meeting">
-            <div class="meeting-info">
-                <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
-                <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
-                <div class="meeting-info-buttons">
+@*<div class="meeting-day">
+            <div class="meeting-day-date-container">
+                <span class="meeting-day-date">15/7/2021</span>
+            </div>
+            <div class="meeting">
+                <div class="meeting-info">
+                    <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
+                    <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
+                    <div class="meeting-info-buttons">
 
-                    <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
-                    <a href="#" class="btn meeting-join">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                        Join
-                    </a>
+                        <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
+                        <a href="#" class="btn meeting-join">
+                            <i class="bi bi-box-arrow-in-right"></i>
+                            Join
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="meeting">
+                <div class="meeting-info">
+                    <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
+                    <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
+                    <div class="meeting-info-buttons">
+
+                        <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
+                        <a href="#" class="btn meeting-join">
+                            <i class="bi bi-box-arrow-in-right"></i>
+                            Join
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="meeting">
-            <div class="meeting-info">
-                <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
-                <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
-                <div class="meeting-info-buttons">
+        <div class="meeting-day">
+            <div class="meeting-day-date-container">
+                <span class="meeting-day-date">15/7/2021</span>
+            </div>
+            <div class="meeting">
+                <div class="meeting-info">
+                    <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
+                    <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
+                    <div class="meeting-info-buttons">
 
-                    <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
-                    <a href="#" class="btn meeting-join">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                        Join
-                    </a>
+                        <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
+                        <a href="#" class="btn meeting-join">
+                            <i class="bi bi-box-arrow-in-right"></i>
+                            Join
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="meeting">
+                <div class="meeting-info">
+                    <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
+                    <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
+                    <div class="meeting-info-buttons">
+
+                        <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
+                        <a href="#" class="btn meeting-join">
+                            <i class="bi bi-box-arrow-in-right"></i>
+                            Join
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="meeting">
+                <div class="meeting-info">
+                    <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
+                    <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
+                    <div class="meeting-info-buttons">
+
+                        <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
+                        <a href="#" class="btn meeting-join">
+                            <i class="bi bi-box-arrow-in-right"></i>
+                            Join
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="meeting-day">
-        <div class="meeting-day-date-container">
-            <span class="meeting-day-date">15/7/2021</span>
-        </div>
-        <div class="meeting">
-            <div class="meeting-info">
-                <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
-                <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
-                <div class="meeting-info-buttons">
-
-                    <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
-                    <a href="#" class="btn meeting-join">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                        Join
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="meeting">
-            <div class="meeting-info">
-                <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
-                <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
-                <div class="meeting-info-buttons">
-
-                    <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
-                    <a href="#" class="btn meeting-join">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                        Join
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="meeting">
-            <div class="meeting-info">
-                <span class="meeting-name"><i class="fas fa-comment"></i> Consulting</span>
-                <span class="meeting-hour"><i class="far fa-clock"></i> 12:30</span>
-                <div class="meeting-info-buttons">
-
-                    <button class="btn btn-attendees"><i class="bi bi-person-circle"></i> Attendees</button>
-                    <a href="#" class="btn meeting-join">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                        Join
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+    </div>*@
 
 
 
@@ -161,15 +163,120 @@
     </div>
 </div>
 
-<div class="modal fade" id="attendeesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-body" id="attendeesBody">
+<div class="modal fade" id="dayMeetings" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document" >
+        <div class="modal-content" style="width:600px;left:-50px;top:100px">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="dayMeetingsBody" style="padding:1rem 10px;">
 
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+
         </div>
     </div>
 </div>
+
+
+
+<div id="app-calendar"></div>
+
+
+
+<script>
+    function createMeetingsButton(day) {
+        var node = document.createElement("div");
+        var textnode = document.createTextNode("Meetings ");
+        node.appendChild(textnode);
+        var icon = document.createElement("i");
+        icon.setAttribute("class", "fas fa-tasks");
+        node.appendChild(icon);
+        node.setAttribute("class", "calendar-meetings");
+        node.setAttribute("data-toggle", "modal");
+        node.setAttribute("data-target", "#dayMeetings");
+        day.appendChild(node);
+    }
+
+    function convertFromJsonToDate(startDate, endDate) {
+        var meetingTime = {
+            "start": "",
+            "end": ""
+        };
+        var meetingStart = JSON.parse(JSON.stringify(startDate)) 
+        var meetingEnd = JSON.parse(JSON.stringify(endDate)) 
+        var date1 = new Date(meetingStart);
+        var date2 = new Date(meetingEnd);
+        meetingTime["start"] = date1;
+        meetingTime["end"] = date2;
+        return meetingTime;
+        //console.log(meeting);
+    }
+
+    function fetchMeetings(day) {
+        $.ajax({
+            url: "/Meeting/GetMeetingsForDay?day=" + day,
+            success: function (data) {
+                $('#dayMeetingsBody').html('');
+                for (let i = 0; i < data.length; i++) {
+
+                    var join = "";
+                    var meetingTime = convertFromJsonToDate(data[i].start, data[i].end);
+                    
+                    if (meetingTime.start.getHours() >= @DateTime.Now.Hour && @DateTime.Now.Hour <= meetingTime.end.getHours() && meetingTime.start.getDate() == @DateTime.Now.Day) {
+                        join = ` <a asp-action="Chat" asp-route-id="${data[i].id}" class="btn meeting-join meeting-started">
+                        <i class="bi bi-box-arrow-in-right"></i>
+                        Join
+                    </a>`
+                    }
+                    else {
+                        join = `<a href="#" class="btn meeting-join">
+                        <i class="bi bi-box-arrow-in-right"></i>
+                        Join
+                    </a>`
+                    }
+                    var meeting = ` <div class="meeting">
+                        <div class="meeting-info">
+                            <span class="meeting-name"><i class="fas fa-comment"></i> ${data[i].topic}</span>
+                            <span class="meeting-hour"><i class="far fa-clock"></i> ${meetingTime.start.getHours()}:${meetingTime.start.getMinutes()} -
+                            ${meetingTime.end.getHours()}:${meetingTime.end.getMinutes()}</span>
+                            <div class="meeting-info-buttons">
+                               ${join}
+                            </div>
+                        </div>
+                    </div>`
+                    document.getElementById('dayMeetingsBody').innerHTML += meeting;
+                }
+            }
+        })
+    }
+
+    $(document).ready(function () {
+
+        var model;
+        $.ajax({
+            url: "/Meeting/GetMeetingsDay",
+            success: function (data) {
+                model = data;
+                document.querySelectorAll("#app-calendar .day").forEach((day, index) => {
+                    for (let i = 0; i < model.length; i++) {
+                        if (model[i] == (index + 1)) {
+                            createMeetingsButton(day);
+                        }
+                    }
+                    day.addEventListener("click", function () {
+                        //fetch meetings for current day
+                        fetchMeetings(index + 1);
+                    })
+                });
+            }
+        })
+
+
+
+
+
+
+    })
+</script>
