--- a/MIS/Views/Shared/_Layout.cshtml
+++ b/MIS/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.js"></script>
     <link href="~/css/records.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/PoliceSection.css" />
+    <link href="~/css/meetingRequest.css" rel="stylesheet" />
     <link href="https://unpkg.com/treeflex/dist/css/treeflex.css" rel="stylesheet">
     <link href="~/css/details.css" rel="stylesheet" />
 </head>
